Changed background image url

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("C:/Users/Daniela/Documents/Programing/She Codes/Plus/Week 2/Homework/v3/Images/background_kite.svg");
+  background-image: url("/Images/background_kite.svg");
 }
 .container {
   margin: 20px auto;
