Added github link

--- a/src/style.css
+++ b/src/style.css
@@ -106,6 +106,9 @@ p.card-title {
 p.card-text {
   line-height: 16px;
 }
+#code-link {
+  color: #055052;
+}
 .contact-button {
   display: block;
   margin: 20px auto 0 auto;
