--- a/src/style.css
+++ b/src/style.css
@@ -43,16 +43,13 @@ footer,
 #current-city {
   margin: 20px 0 5px 0;
 }
-.weather-row {
-  margin-top: 10px;
-}
 .today-current-date-time {
   font-size: 16px;
 }
 .today-current-weather {
   font-size: 21px;
 }
-.today-current-weather::first-letter {
+.weather-description ::first-letter {
   text-transform: capitalize;
 }
 #today-current-temp {
@@ -98,7 +95,7 @@ footer,
 }
 .fa-cloud,
 .fa-sun,
-.fa-cloud-sun-rain, 
+.fa-cloud-sun-rain,
 #code-link {
   color: #055052;
 }
