--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,11 @@ footer,
   background-color: #055052;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 }
+#greeting-tip {
+  line-height: 25px;
+  padding: 5px;
+  margin: 2px;
+}
 .image-row {
   padding: 6px;
 }
