Revert "Alter background image location"
This reverts commit 674c13e358ad83011db98ef22c8258aa459f45ce.

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
-/* body {
+body {
   background-image: url("/Images/background_kite.svg");
-} */
+}
 .container {
   margin: 20px auto;
   border: 5px solid #ffeedbe8;
