Alteration of background images with the weather

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../images/background_kite.svg);
+  background-image: url(../images/backg__kite.svg);
 }
 .container {
   margin: 20px auto;
